# evo-lang

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: lexicon.csv  neo_romance_dict.json
scripts/: audit_rules.py  translate_lorem.py
src/: config.py  data_fetcher.py  fitness.py  genetics.py  grammar.py  main.py  phonetics.py  precompute_neo.py  semantics.py  translator.py
tests/: test_integrated_evolution.py
